--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,20 @@
   </properties>
 
   <dependencies>
+    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+      <version>0.9.12</version>
+  </dependency>
+
   </dependencies>
 
   <build>
