--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
           </executions>
         </plugin>
 
-        <plugin>
+        <!-- <plugin>
           <groupId>de.jflex</groupId>
           <artifactId>jflex-maven-plugin</artifactId>
           <version>1.8.2</version>
@@ -71,7 +71,7 @@
               </goals>
             </execution>
           </executions>
-        </plugin>
+        </plugin> -->
 
         
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
